@@ -46,10 +46,4 @@ realloc (void *ptr, grub_size_t size)
   return grub_realloc (ptr, size);
 }
 
-static inline void __attribute__ ((noreturn))
-abort (void)
-{
-  grub_abort ();
-}
-
 #endif
